			   XPCE ChangeLog
			   ==============

* PORT: Some of the GCC 4.0 issues: handling names, visibility attribute,
  illegal lvalues in DND interface. Work with Stefan Dirsch from SuSE
  preparing for the next SuSE release.


VERSION 6.5.14, distributed with SWI-Prolog 5.5.14
==================================================

* ADDED: allow for rules for the multifile predicate
  emacs_prolog_colours:style/2 to define personal colour preference. 
  Steve Moyle.


VERSION 6.5.13, distributed with SWI-Prolog 5.5.13
==================================================

* PORT: remove regex debugging code, as it fails to compile on some
  systems.

* MODIFIED: changed operators after discussion with Paulo Moura about
  a conflict with @.  I think these values are more in line with the
  ISO table.

	op(100, fx, @)	--> op(200, fy, @).
	op(150, yfx, ?) --> op(250, yfx, ?).

* ADDED: PceEmacs: report encoding in ->properties and allow changing
  using M-x encoding.

* ADDED: Support for BOM.  See class file and SWI-Prolog manual.

* MODIFIED: Replaced the underlying regular expression library from
  GNU-regex to Henry Spencers regex implementation with the Tcl added
  support for UNICODE.  Support for regular expressions is now a lot
  more powerful, but unfortunately SERIOUSLY INCOMPATIBLE.  There is
  a program in library(pce_regex_compat) that can convert regular
  expressions embedded in sourcefiles.  This is not perfect, sometimes
  regular expressions are created on the fly and sometimes the script
  may modify an atom that is not a regular expression.  It did at least
  95% of the job for PceEmacs and the rest of the XPCE libraries though.

* ADDED: UNICODE support for ->save_in_file on names and strings.

* ADDED: UNICODE support for class text_buffer in ->save_in_file and
  file<-object.


VERSION 6.5.12, distributed with SWI-Prolog 5.5.12
==================================================

* ADDED: library(pce_progress): provide progress bars.
